# alfred

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  workflow.py
andor/: main.py
bitly/: main.py
ciap/: main.py
cleanurl/: main.py
endor/: main.py
go/: create_db.sql  main.py  update.py  utils.py
gogogo/: main.py
ilovepdf/: check_tools.py  help.md  main.py  services.py
img2pdf/: main.py
ivaigic/: main.py
leroymerlin/: main.py
marte/: main.py
pdfmerge/: main.py
pdfsplit/: main.py
peqes/: main.py
photoroom/: main.py
rename/: main.py
savetweetvid/: main.py
square/: main.py
svg2png/: main.py
translate/: main.py
unshorten/: main.py
vcompress/: main.py
vip/: main.py
