[project]
name = "alfred"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "findersel>=0.1.4",
    "pillow>=11.3.0",
    "prettyconf>=2.3.0",
    "pylovepdf>=1.3.2",
    "pypdf2>=3.0.1",
    "pyperclip>=1.9.0",
    "requests>=2.32.4",
    "selenium==3.141.0",
    "svglib>=1.5.1",
    "wrpy>=0.1.3",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
]
